# raylib-quickstart

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  main.cpp  vcpkg.json
assets/: Forest.tsj  Overworld.tsj  sample.json
lib/: CMakeLists.txt
lib/toolkit/: CMakeLists.txt
lib/toolkit/include/: BoxAttributes.hpp  GameConfiguration.hpp  Level.hpp  MapExceptions.hpp  Menu.hpp  MenuOption.hpp  TextAttributes.hpp  TiledMap.hpp  Toolkit.hpp  dialogbox.hpp
lib/toolkit/src/: BoxAttributes.cpp  GameConfiguration.cpp  MapExceptions.cpp  Menu.cpp  MenuOption.cpp  TiledMap.cpp  Toolkit.cpp  dialogbox.cpp
sample_lessons/: CMakeLists.txt
sample_lessons/HelloWorld/: CMakeLists.txt  main.cpp
sample_lessons/Variables/: CMakeLists.txt  main.cpp
src/: main.cpp
